--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="https://jasonrclark.com/css/pixyll.css" type="text/css">
+  </head>
   <body>
     <h1>Robot Likes Cycling</h1>
   </body>
