--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" href="https://jasonrclark.com/css/pixyll.css" type="text/css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-adapter-moment/1.0.0/chartjs-adapter-moment.min.js"></script>
     <script src="./code.js"></script>
 
     <style>
