--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div style="padding:20px;float:left;">
         <h3>Max: <span id="maxDistance">boo</span></h3>
-        <h3>Average: <span id="averageDistance">boo</span></h3>
+        <h3>Ave: <span id="averageDistance">boo</span></h3>
         <h3>Count: <span id="countDistance">boo</span></h3>
       </div>
     </div>
