Ride Distance, not Distances

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           chart({
             data: rides,
             elementName: 'perDistanceChart',
-            title: 'Ride Distances (miles)',
+            title: 'Ride Distance (miles)',
             type: 'bar',
             yAxisKey: 'distance',
           });
