--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Robot Likes Cycling</title>
     <link rel="stylesheet" href="https://jasonrclark.com/css/pixyll.css" type="text/css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.js"></script>
