--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             data: totals,
             elementName: 'totalDistanceChart',
             title: 'Total Distance (miles)',
-            type: 'line',
+            type: 'scatter',
             yAxisKey: 'total',
           });
 
