--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           vanity({
             elementName: 'countDistance',
             value: rides.length,
-            unit: '',
+            fixed: 0,
           });
 
           vanityDistance({
