--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         font-weight:normal;
       }
 
+      h3 {
+        color: #0B2161;
+      }
+
       .chart {
         float:left;
         height:325px;
