--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <canvas id="perDistanceChart"></canvas>
       </div>
       <div class="vanity">
-        <h3>Max: <span id="maxDistance">boo</span></h3>
-        <h3>Ave: <span id="averageDistance">boo</span></h3>
-        <h3>Count: <span id="countDistance">boo</span></h3>
+        <h3>Max: <span id="maxDistance"></span></h3>
+        <h3>Ave: <span id="averageDistance"></span></h3>
+        <h3>Count: <span id="countDistance"></span></h3>
       </div>
     </div>
 
@@ -55,7 +55,7 @@
         <canvas id="totalDistanceChart"></canvas>
       </div>
       <div class="vanity">
-        <h3>Total: <span id="totalDistance">boo</span></h3>
+        <h3>Total: <span id="totalDistance"></span></h3>
       </div>
     </div>
 
@@ -64,8 +64,8 @@
         <canvas id="averageSpeedChart"></canvas>
       </div>
       <div class="vanity">
-        <h3>Average: <span id="averageSpeed">boo</span></h3>
-        <h3>Max: <span id="maxSpeed">boo</span></h3>
+        <h3>Average: <span id="averageSpeed"></span></span></h3>
+        <h3>Max: <span id="maxSpeed"></span></h3>
       </div>
     </div>
 
