--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       </div>
       <div class="vanity">
         <h3>Total: <span id="totalDistance"></span></h3>
-        <h3>Total Time: <span id="totalTime"></span></h3>
+        <h3>Total Hours: <span id="totalHours"></span></h3>
+        <h3>Total Days: <span id="totalDays"></span></h3>
       </div>
     </div>
 
@@ -126,10 +127,17 @@
           });
 
           vanity({
-            elementName: 'totalTime',
+            elementName: 'totalHours',
             value: totalTime / 60 / 60,
             fixed: 0,
             unit: 'hours',
+          });
+
+          vanity({
+            elementName: 'totalDays',
+            value: totalTime / 60 / 60 / 24,
+            fixed: 0,
+            unit: 'days',
           });
 
           vanityDistance({
